--- a/Responsive Design_Mobile First/styles.css
+++ b/Responsive Design_Mobile First/styles.css
@@ -234,6 +234,23 @@ main{
     background-repeat: no-repeat;
 }
 
+.currency-table--date{
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 8px;
+}
+
+.currency-table--date p{
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--warm-black);
+}
+
 /*==================================*/
 .main-commission-table{
     width: 70%;
@@ -317,4 +334,21 @@ main{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.commission-table--date{
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-blue);
+    border-radius: 8px;
+}
+
+.commission-table--date p{
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--warm-black);
 }
