--- a/Responsive Design_Mobile First/styles.css
+++ b/Responsive Design_Mobile First/styles.css
@@ -352,3 +352,52 @@ main{
     font-weight: 300;
     color: var(--warm-black);
 }
+
+.main-product-detail{
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--black);
+}
+
+.product-detail--batata-logo{
+    /*  Si se va a utilizar position:absolute
+        necesitaremos de un contenedor que tenga
+        position: relative.
+        Es por eso que en este caso, nuestro contenedor
+        padre tiene position relative.
+    */
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    top: -10px;
+    left: calc(50% - 20px);
+    background-image: url('./assets/icons/batata.svg');
+}
+
+.product-detail--title{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.product-detail--title h2{
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+
+.product-detail--title p{
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
